changed header text
logo->squabo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Version: 0.1
 
 <body>
  <header>
-   <a href="#" class="tutorial-link">LOGO</a>
+   <a href="#" class="tutorial-link">SQUABO</a>
  </header>
   <!--===============================START DEMO WRAPPER====================================-->
 <div class="demo-wrapper">
